Fix Sonar issues (#132)